--- a/spices/cix-bind-utils.org
+++ b/spices/cix-bind-utils.org
@@ -1,6 +1,6 @@
 # File           : cix-bind-utils.org
 # Created        : <2016-12-19 Mon 22:41:12 GMT>
-# Last Modified  : <2016-12-20 Tue 00:03:44 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
