--- a/spices/cix-diffutils.org
+++ b/spices/cix-diffutils.org
@@ -1,6 +1,6 @@
 # File           : cix-diffutils.org
 # Created        : <2016-11-20 Sun 23:05:57 GMT>
-# Last Modified  : <2016-12-10 Sat 09:44:21 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
