--- a/spices/cix-ffmpeg.org
+++ b/spices/cix-ffmpeg.org
@@ -1,6 +1,6 @@
 # File           : cix-ffmpeg.org
 # Created        : <2016-11-16 Wed 23:24:34 GMT>
-# Last Modified  : <2016-11-17 Thu 23:35:53 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
