--- a/spices/cix-fontconfig.org
+++ b/spices/cix-fontconfig.org
@@ -1,6 +1,6 @@
 # File           : cix-fontconfig.org
 # Created        : <2016-11-09 Wed 22:57:03 GMT>
-# Last Modified  : <2016-11-11 Fri 23:33:07 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
