--- a/spices/cix-gnu-binutils.org
+++ b/spices/cix-gnu-binutils.org
@@ -1,6 +1,6 @@
 # File           : cix-gnu-binutils.org
 # Created        : <2015-11-02 Mon 22:18:23 GMT>
-# Last Modified  : <2016-12-26 Mon 21:28:25 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
