--- a/spices/cix-gnu-findutils.org
+++ b/spices/cix-gnu-findutils.org
@@ -1,6 +1,6 @@
 # File           : cix-gnu-findutils.org
 # Created        : <2015-11-17 Tue 22:54:30 GMT>
-# Last Modified  : <2016-12-20 Tue 01:00:30 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
