--- a/spices/cix-gnu-grep.org
+++ b/spices/cix-gnu-grep.org
@@ -1,6 +1,6 @@
 # File           : cix-gnu-grep.org
 # Created        : <2016-11-18 Fri 23:49:59 GMT>
-# Last Modified  : <2017-1-06 Fri 22:57:01 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
