--- a/spices/cix-man-db.org
+++ b/spices/cix-man-db.org
@@ -1,6 +1,6 @@
 # File           : cix-man-db.org
 # Created        : <2016-11-05 Sat 00:08:04 GMT>
-# Last Modified  : <2016-11-07 Mon 21:32:15 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
