--- a/spices/cix-nmap.org
+++ b/spices/cix-nmap.org
@@ -1,6 +1,6 @@
 # File          : gnu-core-utilities.md
 # Created       : <2016-10-30 Sun 21:06:58 GMT>
-# Last Modified : <2016-10-31 Mon 22:34:08 GMT> sharlatan
+# Modified : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author        : sharlatan
 # Maintainer    :
 
