--- a/spices/cix-parted.org
+++ b/spices/cix-parted.org
@@ -1,6 +1,6 @@
 # File           : cix-parted.org
 # Created        : <2016-11-12 Sat 10:01:15 GMT>
-# Last Modified  : <2016-11-12 Sat 11:00:08 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
