--- a/spices/cix-psmisc.org
+++ b/spices/cix-psmisc.org
@@ -1,6 +1,6 @@
 # File           : cix-psmisc.org
 # Created        : <2016-01-25 Mon 22:28:37 GMT>
-# Last Modified  : <2016-11-07 Mon 22:44:03 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
