--- a/spices/cix-shadow-utils.org
+++ b/spices/cix-shadow-utils.org
@@ -1,6 +1,6 @@
 # File           : cix-shadow-utils.org
 # Created        : <2016-05-03 Tue 00:09:23 GMT>
-# Last Modified  : <2017-1-11 Wed 22:41:17 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
