--- a/spices/cix-sox.org
+++ b/spices/cix-sox.org
@@ -1,6 +1,6 @@
 # File           : cix-sox.org
 # Created        : <2016-11-25 Fri 00:07:36 GMT>
-# Last Modified  : <2016-11-25 Fri 00:23:05 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
