--- a/spices/cix-autofs.org
+++ b/spices/cix-autofs.org
@@ -1,6 +1,6 @@
 # File           : cix-autofs.org
 # Created        : <2016-11-17 Thu 22:42:00 GMT>
-# Last Modified  : <2016-12-20 Tue 23:02:59 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
