--- a/spices/cix-curl.org
+++ b/spices/cix-curl.org
@@ -1,6 +1,6 @@
 # File           : cix-curl.org
 # Created        : <2017-01-06 Fri 23:28:37 GMT>
-# Last Modified  : <2017-1-06 Fri 23:30:20 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
