--- a/spices/cix-dmidecode.org
+++ b/spices/cix-dmidecode.org
@@ -1,6 +1,6 @@
 # File           : cix-dmidecode.org
 # Created        : <2016-11-13 Sun 19:49:01 GMT>
-# Last Modified  : <2016-12-13 Tue 23:58:12 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
