--- a/spices/cix-gawk.org
+++ b/spices/cix-gawk.org
@@ -1,6 +1,6 @@
 # File          : cix-awk.org
 # Created       : <2016-11-04 Fri 22:15:18 GMT>
-# Last Modified : <2017-1-18 Wed 21:35:16 GMT> sharlatan
+# Modified : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author        : sharlatan
 # Maintainer    :
 
