--- a/spices/cix-gnu-core-utilities.org
+++ b/spices/cix-gnu-core-utilities.org
@@ -1,6 +1,6 @@
 # File          : gnu-core-utilities.md
 # Created       : Wed 14 Oct 2015 23:07:41
-# Last Modified : <2017-1-04 Wed 00:21:20 GMT> sharlatan
+# Modified : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Maintainer    : sharlatan
 
 #+OPTIONS: num:nil
