--- a/spices/cix-gzip.org
+++ b/spices/cix-gzip.org
@@ -1,6 +1,6 @@
 # File          : gnu-core-utilities.md
 # Created       : <2016-11-03 Thu 23:13:44 GMT>
-# Last Modified : <2016-12-13 Tue 23:58:12 GMT> sharlatan
+# Modified : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author        : sharlatan
 # Maintainer    :
 
