--- a/spices/cix-hall-of-fame.org
+++ b/spices/cix-hall-of-fame.org
@@ -1,6 +1,6 @@
 # File           : cix-hall_of_fame.org
 # Created        : <2016-11-06 Sun 22:27:11 GMT>
-# Last Modified  : <2016-12-15 Thu 20:43:00 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
