--- a/spices/cix-kmod.org
+++ b/spices/cix-kmod.org
@@ -1,6 +1,6 @@
 # File           : cix-kmod.org
 # Created        : <2016-06-19 Tue 23:54:09 GMT>
-# Last Modified  : <2016-12-13 Tue 23:58:12 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 #+Author: sharlatan
 # Maintainer(s)  :
 # Short          :
