--- a/spices/cix-lvm2.org
+++ b/spices/cix-lvm2.org
@@ -1,6 +1,6 @@
 # File           : cix-lvm2.org
 # Created        : <2016-02-21 Mon 02:02:27 GMT>
-# Last Modified  : <2016-12-26 Mon 21:28:25 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
