--- a/spices/cix-net-tools.org
+++ b/spices/cix-net-tools.org
@@ -1,6 +1,6 @@
 # File          : net-utils.md
 # Created       : Mon 16 Nov 2015 20:51:24
-# Last Modified : <2016-12-13 Tue 23:58:12 GMT> sharlatan
+# Modified : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Maintainer    : sharlatan
 
 #+OPTIONS: num:nil
