--- a/spices/cix-netcat.org
+++ b/spices/cix-netcat.org
@@ -1,6 +1,6 @@
 # File           : cix-netcat.org
 # Created        : <2016-11-04 Fri 22:44:54 GMT>
-# Last Modified  : <2017-1-17 Tue 23:58:52 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
