--- a/spices/cix-nfs-utils.org
+++ b/spices/cix-nfs-utils.org
@@ -1,6 +1,6 @@
 # File           : cix-nfs-utils.org
 # Created        : <2016-11-07 Mon 22:11:39 GMT>
-# Last Modified  : <2016-12-13 Tue 23:58:12 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
