--- a/spices/cix-usbutils.org
+++ b/spices/cix-usbutils.org
@@ -1,6 +1,6 @@
 # File           : cix-usbutils.org
 # Created        : <2016-11-13 Sun 20:16:58 GMT>
-# Last Modified  : <2016-12-17 Sat 21:57:52 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
