--- a/spices/cix-sed.org
+++ b/spices/cix-sed.org
@@ -1,6 +1,6 @@
 # File           : cix-sed.org
 # Created        : <2016-11-04 Fri 22:49:14 GMT>
-# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
+# Modified  : <2017-2-03 Fri 21:49:08 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
@@ -44,8 +44,12 @@ output text betwin BEGIN_PAT and END_PAT:
 :    ~$ sed -n '/BEGIN_PAT/,/END_PAT/p' input_f
 
 **** sed-170106225346
-     wrap each line of a file in quotes:
+wrap each line of a file in quotes:
 :    ~$ sed -e 's/\(.*\)/"\1"/' input_f
+
+**** sed-170203214632
+split camelcase with spaces:
+:    ~$ sed 's/\([A-Z]\)/ \1/g'
 
 **** sed-161209234700
 insert spaces every n character in a file or string:
@@ -63,7 +67,7 @@ insert spaces every n character in a file or string:
 
 *** sed::files
 *** sed::see-also
-    awk(1), ed(1), grep(1), tr(1), perlre(1)
+    [[file:./cix-gawk.org::*awk][awk (1)]], ed, [[file:./cix-gnu-grep.org::*grep][grep (1)]], [[file:./cix-gnu-core-utilities.org::*tr][tr (1)]],perlre(1)
 * References
 ** Links
 - Sed - An Introduction and Tutorial by Bruce Barnett
