--- a/spices/cix-wget.org
+++ b/spices/cix-wget.org
@@ -1,6 +1,6 @@
 # File           : cix-wget.org
 # Created        : <2016-11-21 Mon 21:11:14 GMT>
-# Last Modified  : <2016-11-27 Sun 23:56:32 GMT> sharlatan
+# Modified  : <2017-1-20 Fri 21:28:50 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
@@ -11,6 +11,7 @@
 
 |--------+---------------|
 | *Author* | Hrvoje NikXiX |
+|--------+---------------|
 
 GNU  Wget is  a file  retrieval utility  which can  use either  the HTTP  or FTP
 protocols. Wget features include the ability to work in the background while you
@@ -26,11 +27,14 @@ support for Proxy servers, and configurability.
 | p |   |
 | e |   |
 *** wget::examples
-- wget-161127222725 :: download an entire website:
+**** wget-161127222725
+download an entire website:
 :    ~ $  wget --random-wait -r -p -e robots=off -U mozilla WEBSITE_URL
 
-- wget-161121211338 :: download a sertain file in a list of files from a server
-     if you know the structure of them:
+**** wget-161121211338
+download a sertain file in a list of files from a server if you know the
+structure of them:
+
 #+BEGIN_SRC sh
   #!/usr/bin/env bash
 
@@ -42,6 +46,4 @@ support for Proxy servers, and configurability.
 
   wget "$URL${FILE_NAMES[2]}"
 #+END_SRC
-declare,
-curl (1),
-[[file:./cix-gnu-grep.org::*grep][grep (1)]]
+declare [[file::*curl][curl (1)]] [[file:./cix-gnu-grep.org::*grep][grep (1)]]
