--- a/cix-main.org
+++ b/cix-main.org
@@ -1,6 +1,6 @@
 # File       : cix-main.org
 # Created    : Sat 07 Nov 2015 22:58:38
-# Modified   : <2017-2-05 Sun 20:51:34 GMT> sharlatan
+# Modified   : <2017-3-13 Mon 22:16:24 GMT> sharlatan
 # Maintainer : sharlatan <sharlatanus@gmail.com>
 # Short      :
 
@@ -73,141 +73,151 @@ on *GNU/Linux*
 : <package-name><link><description>
 
 - *Legacy* /Keep the history/
-  + [[./spices/cix-hall-of-fame.org][Hall of Fame]] :: Who made it posible!
-  + [[./spices/cix-unix_land.org][UNIX Land]] :: Common UNIX commands.
+  + [[./spices/cix-hall-of-fame.org][hall of fame]] :: who made it posible!
+  + [[./spices/cix-unix_land.org][unix land]] :: common unix commands.
 
-- *Core* /Usually it contains on the most distributions/
-  + [[./spices/cix-busybox.org][busybox]] :: The Swiss Army Knife of Embedded Linux
-  + [[./spices/cix-gnu-core-utilities.org][gnu-core-utilities]] :: basic file, shell and text manipulation utilities: *Linux FreeBSD*
-  + [[./spices/cix-man-db.org][man-db]] :: Tools for searching and reading man pages: *Linux*
-  + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system: *Linux*
+- *Core* /usually it contains on the most distributions/
+  + [[./spices/cix-busybox.org][busybox]] :: the swiss army knife of embedded linux
+  + [[./spices/cix-gnu-core-utilities.org][gnu-core-utilities]] :: basic file, shell and text manipulation utilities: *linux freebsd*
+  + [[./spices/cix-man-db.org][man-db]] :: tools for searching and reading man pages: *linux*
+  + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the linux operating system: *linux*
   + [[file:spices/cix-ncurses.org][ncurses]] :: terminal-independent method of updating character screens with
                reasonable optimization.
-  + The Heirloom Project :: traditional implementations of standard UNIX utils
-  + BSD :: List of common BSD commands
+  + the heirloom project :: traditional implementations of standard unix utils
+  + bsd :: list of common bsd commands
+  + [[./spices/cix-kbd.org][kbd]] :: tools for configuring the console (keyboard, virtual terminals, etc.)
 
-- *File* /Everything is a file/!
-  + [[file:./spices/cix-diffutils.org][diffutils]] :: A GNU collection of diff utilities
-  + [[./spices/cix-emacs.org][emacs]] :: GNU Emacs text editor
-  + [[./spices/cix-gawk.org][gawk]] :: The GNU version of the awk text processing utility
-  + [[./spices/cix-less.org][less]] :: A text file browser similar to more, but better
-  + [[./spices/cix-lsof.org][lsof]] :: A utility which lists open files on a Linux/UNIX system
+- *File* /everything is a file/!
+  + [[file:./spices/cix-diffutils.org][diffutils]] :: a gnu collection of diff utilities
+  + [[./spices/cix-emacs.org][emacs]] :: gnu emacs text editor
+  + [[./spices/cix-gawk.org][gawk]] :: the gnu version of the awk text processing utility
+  + [[./spices/cix-less.org][less]] :: a text file browser similar to more, but better
+  + [[./spices/cix-lsof.org][lsof]] :: a utility which lists open files on a linux/unix system
   + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor
-  + [[./spices/cix-nano.org][nano]] :: A small text editor
-  + [[./spices/cix-sed.org][sed]] :: A GNU stream text editor
-  + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim: *FreeBSD Linux OS-X*
+  + [[./spices/cix-nano.org][nano]] :: a small text editor
+  + [[./spices/cix-sed.org][sed]] :: a gnu stream text editor
+  + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim: *freebsd linux os-x*
 
-- *Transfare-sync* /Put me up, put me down/
-  + [[file:./cix-curl.org][curl]] :: A utility for getting files from remote servers: *Linux FreeBSD*
-  + [[./spices/cix-lsyncd.org][lsyncd]] :: Live Syncing Daemon synchronizes local directories with remote targиets
-  + [[file:./spices/cix-rsync.org][rsync]] :: A program for synchronizing files over a network
-  + [[./spices/cix-vsftp.org][vsftp]] :: Very Secure Ftp Daemon
-  + [[file:./spices/cix-wget.org][wget]] :: A utility for retrieving files using the HTTP or FTP protocols
+- *Transfare-sync* /put me up, put me down/
+  + [[file:./cix-curl.org][curl]] :: a utility for getting files from remote servers: *linux freebsd*
+  + [[./spices/cix-lsyncd.org][lsyncd]] :: live syncing daemon synchronizes local directories with remote targиets
+  + [[file:./spices/cix-rsync.org][rsync]] :: a program for synchronizing files over a network
+  + [[./spices/cix-vsftp.org][vsftp]] :: very secure ftp daemon
+  + [[file:./spices/cix-wget.org][wget]] :: a utility for retrieving files using the http or ftp protocols
 
-- *Filesystem* /Partition file system craft and check/
-  + [[./spices/cix-acl.org][acl]] :: Access control list utilities
-  + [[./spices/cix-autofs.org][autofs]] :: A tool for automatically mounting and unmounting filesystems
-  + bindf :: Fuse filesystem to mirror a directory
-  + [[./spices/cix-btrfs-progs.org][btrfs-progs]] :: Userspace programs for btrfs.
-  + [[./spices/cix-curlftpfs.org][CurlFtpFS]] :: is a fs for accessing FTP hosts based on FUSE and libcurl
-  + [[./spices/cix-e2fsprogs.org][E2fsprogs]] :: Filesystem utilities for use with Ext2/3/4
-  + [[./spices/cix-lvm2.org][lvm2]] :: Userland logical volume management tools
+- *Filesystem* /partition file system craft and check/
+  + [[./spices/cix-acl.org][acl]] :: access control list utilities
+  + [[./spices/cix-autofs.org][autofs]] :: a tool for automatically mounting and unmounting filesystems
+  + bindf :: fuse filesystem to mirror a directory
+  + [[./spices/cix-btrfs-progs.org][btrfs-progs]] :: userspace programs for btrfs.
+  + [[./spices/cix-curlftpfs.org][curlftpfs]] :: is a fs for accessing ftp hosts based on fuse and libcurl
+  + [[./spices/cix-e2fsprogs.org][e2fsprogs]] :: filesystem utilities for use with ext2/3/4
+  + [[./spices/cix-lvm2.org][lvm2]] :: userland logical volume management tools
   + [[./spices/cix-nfs-kernel-server.org][nfs-kernel-server]] ::
-  + [[./spices/cix-nfs-utils.org][nfs-utils]] :: supporting clients and daemons for the kernel NFS server
-  + [[./spices/cix-linux_diskquota.org][quota]] :: System tools for monitoring users disk usage
-  + glusterfs :: Distributed File System
+  + [[./spices/cix-nfs-utils.org][nfs-utils]] :: supporting clients and daemons for the kernel nfs server
+  + [[./spices/cix-linux_diskquota.org][quota]] :: system tools for monitoring users disk usage
+  + glusterfs :: distributed file system
 
-- *Utillities* /Be silent and help ppls/
+- *Utillities* /be silent and help ppls/
   + [[./spices/cix-gnu-binutils.org][gnu-binutils]] :: collection of binary tools
-  + [[./spices/cix-moreutils.org][moreutils]] :: tools that nobody thought to write when UNIX was young
-  + [[file:./spices/cix-parallel.org][parallel]] :: Shell tool for executing jobs in parallel
-  + [[file:./spices/cix-parted.org][parted]] :: The GNU disk partition manipulation program
+  + [[./spices/cix-moreutils.org][moreutils]] :: tools that nobody thought to write when unix was young
+  + [[file:./spices/cix-parallel.org][parallel]] :: shell tool for executing jobs in parallel
+  + [[file:./spices/cix-parted.org][parted]] :: the gnu disk partition manipulation program
   + [[./spices/cix-pm-utils.org][pm-utils]] :: suspend and powerstate setting framework
   + [[./spices/cix-procps-ng.org][procps-ng]] :: utilities for monitoring your system and its processes
   + [[./spices/cix-psmisc.org][psmisc]] :: is a set of small utilities that use the proc filesystem.
-  + [[./spices/cix-shadow-utils.org][shadow-utils]] :: Utilities for managing accounts and shadow password files
-  + [[./spices/cix-strace.org][strace]] :: Tracks and displays system calls associated with a running process
+  + [[./spices/cix-shadow-utils.org][shadow-utils]] :: utilities for managing accounts and shadow password files
+  + [[./spices/cix-strace.org][strace]] :: tracks and displays system calls associated with a running process
+  + [[./spices/cix-perf.org][perf]] :: Performance monitoring for the Linux kerne
 
-- *Hardware* /Hard as a Rock!/
-  + [[./spices/cix-kbd.org][kbd]] :: Tools for configuring the console (keyboard, virtual terminals, etc.)
-  + [[./spices/cix-pciutils.org][pciutils]] :: PCI bus related utilities:
-    *Linux FreeBSD NetBSD OpenBSD GNU/kFreeBSD  Solaris/i386 AIX GNU Hurd Windows
-    CYGWIN BeOS Haiku Darwin*
-  + [[./spices/cix-smartmontools.org][smartmontools]] :: Tools for monitoring SMART capable hard disks
-  + [[./spices/cix-dmidecode.org][dmidecode]] :: Tool to analyse BIOS DMI data
-  + [[./spices/cix-usbutils.org][usbutils]] :: Linux USB utilities
+- *Hardware* /hard as a rock!/
+  + [[./spices/cix-pciutils.org][pciutils]] :: pci bus related utilities:
+    *linux freebsd netbsd openbsd gnu/kfreebsd  solaris/i386 aix gnu hurd windows
+    cygwin beos haiku darwin*
+  + [[./spices/cix-smartmontools.org][smartmontools]] :: tools for monitoring smart capable hard disks
+  + [[./spices/cix-dmidecode.org][dmidecode]] :: tool to analyse bios dmi data
+  + [[./spices/cix-usbutils.org][usbutils]] :: linux usb utilities
   + [[./spices/cix-lshw.org][lshw]] :: hardware lister
 
-- *Searching* /Loosing my religion/
+- *Searching* /loosing my religion/
   + [[./spices/cix-gnu-grep.org][gnu-grep]] :: pattern matching utilities
-  + [[./spices/cix-gnu-findutils.org][gnu-findutils]] :: The GNU versions of find utilities (find and xargs)
-  + [[./spices/cix-ag.org][ag]] :: Super-fast text searching tool - Silversearcher
-  + [[./spices/cix-ack.org][ack]] :: Grep-like text finder
-  + [[file:spices/cix-jq.org][jq]] :: Command-line JSON processor
-  + [[./spices/cix-fdupes.org][fdupes]] :: Finds duplicate files in a given set of directories
+  + [[./spices/cix-gnu-findutils.org][gnu-findutils]] :: the gnu versions of find utilities (find and xargs)
+  + [[./spices/cix-ag.org][ag]] :: super-fast text searching tool - silversearcher
+  + [[./spices/cix-ack.org][ack]] :: grep-like text finder
+  + [[file:spices/cix-jq.org][jq]] :: command-line json processor
+  + [[./spices/cix-fdupes.org][fdupes]] :: finds duplicate files in a given set of directories
 
-- *Compress-archive* /I'm a pac man/
-  + [[./spices/cix-bzip2.org][bzip2]] :: A file compression utility
-  + [[./spices/cix-cpio.org][cpio]] :: A GNU archiving program
-  + [[./spices/cix-gnu-tar.org][gnu-tar]] :: A GNU file archiving program
-  + [[./spices/cix-gzip.org][gzip]] :: The GNU data compression program
-  + [[./spices/cix-unizp.org][unzip]] :: A utility for unpacking zip files
-  + [[./spices/cix-lrzip.org][lrzip]] :: Compression program optimized for large files
-  + [[./spices/cix-pax.org][pax]] :: POSIX File System Archiver
-  + [[./spices/cix-xz.org][xz]] :: LZMA compression utilities: *Linux FreeBSD*
+- *Compress-archive* /i'm a pac man/
+  + [[./spices/cix-bzip2.org][bzip2]] :: a file compression utility
+  + [[./spices/cix-cpio.org][cpio]] :: a gnu archiving program
+  + [[./spices/cix-tar.org][tar]] :: a file archiving program
+  + [[./spices/cix-gzip.org][gzip]] :: the gnu data compression program
+  + [[./spices/cix-unizp.org][unzip]] :: a utility for unpacking zip files
+  + [[./spices/cix-lrzip.org][lrzip]] :: compression program optimized for large files
+  + [[./spices/cix-pax.org][pax]] :: posix file system archiver
+  + [[./spices/cix-xz.org][xz]] :: lzma compression utilities: *linux freebsd*
 
-- *Networking* /We all live in the someone's subnet in/
-  + [[./spices/cix-bind-utils.org][bind-utils]] :: utilities for querying DNS name server
-  + [[./spices/cix-bridge_utils.org][bridge-utils]] :: Utilities for configuring the linux ethernet bridge
+- *Networking* /we all live in the someone's subnet in/
+  + [[./spices/cix-bind-utils.org][bind-utils]] :: utilities for querying dns name server
+  + [[./spices/cix-bridge_utils.org][bridge-utils]] :: utilities for configuring the linux ethernet bridge
   + [[./spices/cix-gnu-inetutils.org][gnu-inetutils]] :: a collection of common network programs
   + [[./spices/cix-iproute2.org][iproute2]] :: routing commands and utilities
-  + [[./spices/cix-iptables.org][iptables]] :: Linux kernel packet filtering capabilities: *Linux*
-  + [[./spices/cix-iputils.org][iputils]] :: network monitoring tools including ping: *Linux*
-  + [[./spices/cix-net-snmp.org][net-snmp]] :: A collection of SNMP protocol tools and libraries
+  + [[./spices/cix-iptables.org][iptables]] :: linux kernel packet filtering capabilities: *linux*
+  + [[./spices/cix-iputils.org][iputils]] :: network monitoring tools including ping: *linux*
+  + [[./spices/cix-net-snmp.org][net-snmp]] :: a collection of snmp protocol tools and libraries
   + [[./spices/cix-net-tools.org][net-tools]] :: collection of base networking utilities
-  + [[./spices/cix-nmap.org][nmap]] :: Network exploration tool and security scanner
-  + [[./spices/cix-openssh.org][OpenSSH]] :: An open source implementation of SSH protocol:
-  *AIX HP-UX Irix Linux NeXT SCO SNI/Reliant Unix Solaris Digital Unix/Tru64/OSF
-  Mac OS-X Cygwin*
-  + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network: *Linux FreeBSD*
+  + [[./spices/cix-nmap.org][nmap]] :: network exploration tool and security scanner
+  + [[./spices/cix-openssh.org][openssh]] :: an open source implementation of ssh protocol:
+  *aix hp-ux irix linux next sco sni/reliant unix solaris digital unix/tru64/osf
+  mac os-x cygwin*
+  + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network: *linux freebsd*
 
-- *Shell* /Not just sand.../
-  + [[./spices/cix-gnu-bash.org][gnu-bash]] :: GNU Bash shell built in commands
-  + [[./spices/cix-fish.org][fish]] ::  A friendly interactive shell
-  + [[./spices/cix-screen.org][screen]] :: A screen manager that supports multiple logins on one terminal
-  + [[./spices/cix-tmux.org][tmux]] :: A terminal multiplexer
-  + [[./spices/cix-zsh.org][zsh]] ::  Powerful interactive shell
+- *Shell* /not just sand.../
+  + [[./spices/cix-gnu-bash.org][gnu-bash]] :: gnu bash shell built in commands
+  + [[./spices/cix-fish.org][fish]] ::  a friendly interactive shell
+  + [[./spices/cix-screen.org][screen]] :: a screen manager that supports multiple logins on one terminal
+  + [[./spices/cix-tmux.org][tmux]] :: a terminal multiplexer
+  + [[./spices/cix-zsh.org][zsh]] ::  powerful interactive shell
+  + [[./spices/cix-tcsh.org][tcsh]] :: An enhanced version of csh, the C shell
 
-- *Scheduling* /World is spinning around/
-  + [[./spices/cix-at.org][at]] :: Job spooling tools
-  + [[./spices/cix-cronie.org][cronie]]  :: Cron daemon for executing programs at set times
+- *Scheduling* /world is spinning around/
+  + [[./spices/cix-at.org][at]] :: job spooling tools
+  + [[./spices/cix-cronie.org][cronie]]  :: cron daemon for executing programs at set times
 
-- *Media* /Pleas your eyes and ears/
-  + [[file:./spices/cix-alsa-utils.org][alsa-utils]] :: Advanced Linux Sound Architecture (ALSA) utilities
-  + [[./spices/cix-ffmpeg.org][ffmpeg]] :: Digital VCR and streaming server
-  + [[file:./spices/cix-fontconfig.org][fontconfig]] :: Font configuration and customization library
-  + [[file:./spices/cix-pulseaudio.org][pulseaudio]] :: PulseAudio sound server utilities
-  + [[file:./spices/cix-sox.org][sox]] :: A general purpose sound file conversion tool
-  + [[./spaces/cix-imagemagic.org][ImageMagic]] ::
+- *Media* /please your eyes and ears/
+  + [[file:./spices/cix-alsa-utils.org][alsa-utils]] :: advanced linux sound architecture (alsa) utilities
+  + [[./spices/cix-ffmpeg.org][ffmpeg]] :: digital vcr and streaming server
+  + [[file:./spices/cix-fontconfig.org][fontconfig]] :: font configuration and customization library
+  + [[file:./spices/cix-pulseaudio.org][pulseaudio]] :: pulseaudio sound server utilities
+  + [[file:./spices/cix-sox.org][sox]] :: a general purpose sound file conversion tool
+  + [[./spaces/cix-imagemagic.org][imagemagic]] ::
 
-- *Security* /It's never be save/
-  + [[file:spices/cix-pam.org][pam]] :: An extensible library which provides authentication for applications
-  + [[file:./spices/cix-libselinux-utils.org][libselinux-utils]] :: SELinux libselinux utilies
-  + [[file:./cix-sudo.org][sudo]] :: Allows restricted root access for specified users
+- *Security* /it's never be save/
+  + [[file:spices/cix-pam.org][pam]] :: an extensible library which provides authentication for applications
+  + [[file:./spices/cix-libselinux-utils.org][libselinux-utils]] :: selinux libselinux utilies
+  + [[file:./cix-sudo.org][sudo]] :: allows restricted root access for specified users
 
-- *Init-system* /Let's party started!/
-  + [[./spices/cix-systemd.org][systemd]] ::  A System and Service Manager
-  + [[./spices/cix-sysvinit-utils.org][sysvinit-utils]] :: System-V-like utilities
+- *Init-system* /let's party started!/
+  + [[./spices/cix-systemd.org][systemd]] ::  a system and service manager
+  + [[./spices/cix-sysvinit-utils.org][sysvinit-utils]] :: system-v-like utilities
   + [[./spices/cix-upstart.org][upstart]] :: event-based init daemo
 
-- *Development* /In the fields of observation chance favors only the prepared mind./
-  + [[./spices/cix-glibc.org][glibc]] :: Common binaries and locale data for glibc
-  + [[./spices/cix-gdb.org][gdb]] :: A GNU source-level debugger for C, C++, Fortran, Go and other language
-  + [[./spices/cix-gcc.org][gcc]] :: Various compilers (C, C++, Objective-C, Java, ...)
-  + [[./spices/cix-autoconf.org][autoconf]] :: A GNU tool for automatically configuring source code
+- *Development* /in the fields of observation chance favors only the prepared mind./
+  + [[./spices/cix-glibc.org][glibc]] :: common binaries and locale data for glibc
+  + [[./spices/cix-gdb.org][gdb]] :: a gnu source-level debugger for c, c++, fortran, go and other language
+  + [[./spices/cix-gcc.org][gcc]] :: various compilers (c, c++, objective-c, java, ...)
+  + [[./spices/cix-autoconf.org][autoconf]] :: a gnu tool for automatically configuring source code
 
-- *Packaging* /Pack me up, pack me down/
-  + [[./spices/cix-packet-managers.org][Package managers utils]] :: PM comparison table and tricks
+- *Packaging* /pack me up, pack me down/
+  + [[file:spices/cix-dpkg.org][dpkg]] :: package manager for debian
+  + [[./spices/cix-apt.org][apt]] :: Debian/Ubuntu commandline package panager.
+  + [[file:cix-yum-dnf.org][yum/dnf]] :: fork of yum, using libsolv as a dependency resolve
+  + [[file:spices/cix-rpm.org][rpm]] :: the rpm package manager (rpm) is a powerful command line driven
+           package management system
+  + [[file:spices/cix-aptitude.org][aptitude]] :: is a featureful package manager for debian gnu/linux systems,
+                based on the renowned apt
+  + [[file:spices/cix-pacman.org][pacman]] :: is one of the major distinguishing features of Arch Linux
+  + [[file:spices/cix-pkg-pkgng.org][pkg/pkgng]] :: is the Next Generation package management tool for FreeBSD
 
 - *Research* /I've got a clue!/
   + [[./spices/cix-netkit.org][Linux Netkit]] :: Utilities for managing processes on your system
@@ -247,9 +257,14 @@ on *GNU/Linux*
 - M. Douglas McIlroy;
   *A Research UNIX Reader: Annotated Excerpts from the Programmer’s Manual, 1971-1986*;
 ** Links
-- GNU Coreutils http://www.gnu.org/software/coreutils/manual/coreutils.html
-- Basics of the Unix Philosophy http://homepage.cs.uri.edu/~thenry/resources/unix_art/ch01s06.html
-- Filenames and Pathnames in Shell: How to do it Correctly http://www.dwheeler.com/essays/filenames-in-shell.html
+- GNU Coreutils
+  http://www.gnu.org/software/coreutils/manual/coreutils.html
+- Basics of the Unix Philosophy
+   http://homepage.cs.uri.edu/~thenry/resources/unix_art/ch01s06.html
+- Filenames and Pathnames in Shell: How to do it Correctly
+  http://www.dwheeler.com/essays/filenames-in-shell.html
+- Rich’s sh (POSIX shell) tricks
+  http://www.etalabs.net/sh_tricks.html
 - http://www.commandlinefu.com/commands/browse/sort-by-votes
 - http://everythingsysadmin.com/
 
