--- a/spices/cix-tar.org
+++ b/spices/cix-tar.org
@@ -1,24 +1,25 @@
-# File           : cix-gnu-tar.org
+# File           : cix-tar.org
 # Created        : <2016-11-04 Fri 22:42:50 GMT>
-# Modified       : <2017-2-11 Sat 02:08:35 GMT> sharlatan
+# Modified       : <2017-3-06 Mon 20:38:23 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
 
 #+OPTIONS: num:nil
 
-#+TITLE: GNU tar
+#+TITLE: tar
 
 * Receipts
-** tar
-*** tar::options
+** GNU tar
+*** gnu-tar::options
 
 | -x | Extract files                                                  |
 | -v | verbose, print the file names as they are extracted one by one |
+| -c | commpress                                                      |
 | -z | The file is a "gzipped" file                                   |
 | -f | Use the following tar archive for the operation                |
 
-*** tar::examples
+*** gnu-tar::examples
 **** tar-170117214147
 creat a tarball of current working directory:
 :    ~$ tar -cvzf "../${PWD##*/}.tar.gz" ./
